--- a/src/header.html
+++ b/src/header.html
@@ -1,25 +1,37 @@
+{% from "./macros/button.html" import button %}
+
 <header class="book-header stack" role="navigation">
-  <a href="#" 
-    rel="summary"
-    class="summary-toggle panel"
-    aria-label="{{ __("SUMMARY_TOGGLE") }}">{{ __("SUMMARY_TOGGLE") }}</a>
+  {{ button
+    ( rel='summary'
+    , label=__('SUMMARY_TOGGLE')
+    , class='summary-toggle panel'
+    )
+  }}
   
   <div class="book-header-tools panel">
     {% if options.github %}
-    <a href="https://github.com/{{ options.github.user }}/{{ options.github.repo }}/edit/{{ options.github.branch }}/{{ progress.current.path }}"
-      rel="edit" title="Edit this page!"
-      aria-label="Edit page in GitHub">Edit this page!</a>
+      {{ button
+        ( href=['https://github.com', options.github.user, options.github.repo, 'edit', options.github.branch, progress.current.path]|join('/')
+        , rel='edit'
+        , label='Edit this page!'
+        )
+      }}
     {% endif %}
 
     {% if glossary.length > 0 %}
-    <a href="{{ basePath }}/GLOSSARY.html" 
-      rel="glossary"
-      aria-label="{{ __("GLOSSARY_OPEN") }}">{{ __("GLOSSARY_OPEN") }}</a>
+      {{ button
+        ( href=basePath + '/GLOSSARY.html'
+        , rel='glossary'
+        , label=__('GLOSSARY_OPEN')
+        )
+      }}
     {% endif %}
 
-    <a href="#" 
-      rel="search"
-      class="search-toggle"
-      aria-label="{{ __("SEARCH_TOGGLE") }}">{{ __("SEARCH_TOGGLE") }}</a>
+    {{ button
+      ( rel='search'
+      , label=__('GLOSSARY_OPEN')
+      , class='search-toggle'
+      )
+    }}
   </div>
 </header>
