--- a/src/header.html
+++ b/src/header.html
@@ -1,4 +1,15 @@
-{% from "./macros/button.html" import button %}
+{% macro button(href, rel, label, class, icon) %}
+  <a href="{{ href }}" rel="{{ rel }}"
+    title="{{ label }}" aria-label="{{ label }}"
+    {% if class %}class="{{ class }}"{% endif %}
+    {% if not href %}onclick="return false"{% endif %}>
+    <span class="button-inner">
+      <object type="image/svg+xml" data="{{ staticBase }}/plugins/gitbook-plugin-zambezi-docs/images/icon-{{ icon or rel }}.svg">
+        {{ label }}
+      </object>
+    </span>
+  </a>
+{% endmacro %}
 
 <header class="book-header stack" role="navigation">
   {{ button
