--- a/src/header.html
+++ b/src/header.html
@@ -16,6 +16,7 @@
     ( rel='summary'
     , label=__('SUMMARY_TOGGLE')
     , class='summary-toggle panel'
+    , staticBase=staticBase
     )
   }}
   
@@ -25,6 +26,7 @@
         ( href=['https://github.com', options.github.user, options.github.repo, 'edit', options.github.branch, progress.current.path]|join('/')
         , rel='edit'
         , label='Edit this page!'
+        , staticBase=staticBase
         )
       }}
     {% endif %}
@@ -34,6 +36,7 @@
         ( href=basePath + '/GLOSSARY.html'
         , rel='glossary'
         , label=__('GLOSSARY_OPEN')
+        , staticBase=staticBase
         )
       }}
     {% endif %}
